<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/planofundo2"
    tools:context=".telabemvindo">

    <TextView
        android:id="@+id/TvBemvindo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:text="@string/bemvindo"
        android:textColor="#020202"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.774"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/texinf1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tex1"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TvBemvindo"
        app:layout_constraintVertical_bias="0.113" />

    <TextView
        android:id="@+id/texinf2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tex2"
        android:textColor="#0B0A0A"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texinf1" />

    <Button
        android:id="@+id/btCon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btcontinua"
        android:textColor="#0C0C0C"
        android:textColorHighlight="#FF5722"
        android:textColorLink="#4CAF50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texinf2" />

</androidx.constraintlayout.widget.ConstraintLayout>